# juice

./: Cargo.toml  README.md  flake.nix
src/: battery.rs  daemon.rs  db.rs  export.rs  main.rs  utils.rs
src/ui/: cli.rs  mod.rs
