[package]
name = "juice-cli"
version = "0.1.0"
edition = "2024"
authors = ["yawarakatai"]
description = "Modern battery status for Linux"
license = "MIT"
repository = "https://github.com/yawarakatai/juice"
keywords = ["battery", "linux", "cli", "power"]
categories = ["command-line-utilities"]

[[bin]]
name = "juice"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
ctrlc = "3.5.1"
directories = "6.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
